tests/baselines/reference/collisionRestParameterArrowFunctions(strict=true).errors.txt
collisionRestParameterArrowFunctions.ts(1,23): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
collisionRestParameterArrowFunctions.ts(8,11): error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.


==== collisionRestParameterArrowFunctions.ts (2 errors) ====
    var f1 = (_i: number, ...restParameters) => { //_i is error
                          ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        var _i = 10; // no error
    }
    var f1NoError = (_i: number) => { // no error
        var _i = 10; // no error
    }
    
    var f2 = (...restParameters) => {
              ~~~~~~~~~~~~~~~~~
!!! error TS7019: Rest parameter 'restParameters' implicitly has an 'any[]' type.
        var _i = 10; // No Error
    }
    var f2NoError = () => {
        var _i = 10; // no error
    }